Attempting to fix bug on IE11 about the ".options" div inside cards.

--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -545,7 +545,7 @@ footer {
         position: relative;
         overflow: auto;
         width: 100%;
-        display: flex;
+        //display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
 
